criação dos arquivos templates html.

--- a/public/search.html
+++ b/public/search.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Buscar</title>
 
     <link rel="stylesheet" href="/public/css/home.css">
-    <link rel="stylesheet" href="/public/css/product.css">
+    <link rel="stylesheet" href="/public/css/search.css">
 </head>
 
 <body>
     <nav class="navbar"></nav>
-    <!-- hero section -->
-    <header class="hero-section">
-        <div class="content">
-            <img src="/public/img/light-logo.png" class="logo" alt="">
-            <p class="sub-heading">Melhor Coleção de Moda de Todos os Tempos</p>
-        </div>
-    </header>
 
-    <!-- cards-container  -->
-    <section class="product">
-        <h2 class="product-category">Best-Seller</h2>
-        <!-- before product-container element. -->
-        <button class="pre-btn"><img src="/public/img/arrow.png" alt=""></button>
-        <button class="nxt-btn"><img src="/public/img/arrow.png" alt=""></button>
-        <!-- inside product section. -->
+    <section class="search-results">
+        <h2 class="heading">Resultados da busca por <span>produto</span></h2>
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
@@ -125,39 +113,10 @@
                     <span class="price">R$20</span><span class="actual-price">R$40</span>
                 </div>
             </div>
-        </div>
-        +7 mais cartas
-    </section>
-
-    <!-- collections -->
-    <section class="collection-container">
-        <a href="#" class="collection">
-            <img src="/public/img/women-collection.png" alt="">
-            <p class="collection-title">Mulher <br> aparelhos</p>
-        </a>
-        <a href="#" class="collection">
-            <img src="/public/img/men-collection.png" alt="">
-            <p class="collection-title">Homem <br> aparelhos</p>
-        </a>
-        <a href="#" class="collection">
-            <img src="/public/img/accessories-collection.png" alt="">
-            <p class="collection-title">Acessórios</p>
-        </a>
-    </section>
-
-
-    <!-- card-container  -->
-    <section class="product">
-        <h2 class="product-category">Camisas</h2>
-        <!-- before product-container element. -->
-        <button class="pre-btn"><img src="/public/img/arrow.png" alt=""></button>
-        <button class="nxt-btn"><img src="/public/img/arrow.png" alt=""></button>
-        <!-- inside product section. -->
-        <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card1.png" class="product-thumb" alt="">
+                    <img src="/public/img/card9.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -169,7 +128,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card2.png" class="product-thumb" alt="">
+                    <img src="/public/img/card10.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -181,7 +140,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card3.png" class="product-thumb" alt="">
+                    <img src="/public/img/card11.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -193,55 +152,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card4.png" class="product-thumb" alt="">
-                    <button class="card-btn">Adicionar a Lista de Compras</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Marca</h2>
-                    <p class="product-short-des">uma breve linha sobre o pano ..</p>
-                    <span class="price">R$20</span><span class="actual-price">R$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card5.png" class="product-thumb" alt="">
-                    <button class="card-btn">Adicionar a Lista de Compras</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Marca</h2>
-                    <p class="product-short-des">uma breve linha sobre o pano ..</p>
-                    <span class="price">R$20</span><span class="actual-price">R$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="/public/img/6.png" class="product-thumb" alt="">
-                    <button class="card-btn">Adicionar a Lista de Compras</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Marca</h2>
-                    <p class="product-short-des">uma breve linha sobre o pano ..</p>
-                    <span class="price">R$20</span><span class="actual-price">R$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card7.png" class="product-thumb" alt="">
-                    <button class="card-btn">Adicionar a Lista de Compras</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Marca</h2>
-                    <p class="product-short-des">uma breve linha sobre o pano ..</p>
-                    <span class="price">R$20</span><span class="actual-price">R$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card8.png" class="product-thumb" alt="">
+                    <img src="/public/img/card12.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -251,14 +162,11 @@
                 </div>
             </div>
         </div>
-        +7 mais cartas
     </section>
-    <footer>
-    </footer>
+    <footer></footer>
+
     <script src="/public/js/nav.js"></script>
-    <script src="/public/js/home.js"></script>
     <script src="/public/js/footer.js"></script>
-    <script src="/public/js/product.js"></script>
 </body>
 
 </html>
