criação do componente login.

--- a/public/404.html
+++ b/public/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
     <nav class="navbar"></nav>
 
     <img src="/public/img/404.png" class="four-0-four-image" alt="">
-    <p class="four-0-four-msg">parece que você está perdido. Vá para o nosso <a href="index.html">Home</a></p>
+    <p class="four-0-four-msg">Parece que você está perdido. Vá para o nosso <a href="index.html">Home</a></p>
 
     <script src="/public/js/nav.js"></script>
 </body>
