ateração e criação de arquivo template.

--- a/public/404.html
+++ b/public/404.html
@@ -7,18 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página não encontrada - Usuário Perdido</title>
 
-    <link rel="stylesheet" href="/public/css/home.css">
-    <link rel="stylesheet" href="/public/css/404.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/404.css">
 
 </head>
 
 <body>
     <nav class="navbar"></nav>
 
-    <img src="/public/img/404.png" class="four-0-four-image" alt="">
+    <img src="img/404.png" class="four-0-four-image" alt="">
     <p class="four-0-four-msg">Parece que você está perdido. Vá para o nosso <a href="index.html">Home</a></p>
 
-    <script src="/public/js/nav.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 
 </html>
