--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/public/css/home.css">
-    <link rel="stylesheet" href="/public/css/product.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/product.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <!-- hero section -->
     <header class="hero-section">
         <div class="content">
-            <img src="/public/img/light-logo.png" class="logo" alt="">
+            <img src="img/light-logo.png" class="logo" alt="">
             <p class="sub-heading">Melhor Coleção de Moda de Todos os Tempos</p>
         </div>
     </header>
@@ -25,14 +25,14 @@
     <section class="product">
         <h2 class="product-category">Best-Seller</h2>
         <!-- before product-container element. -->
-        <button class="pre-btn"><img src="/public/img/arrow.png" alt=""></button>
-        <button class="nxt-btn"><img src="/public/img/arrow.png" alt=""></button>
+        <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
+        <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
         <!-- inside product section. -->
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card1.png" class="product-thumb" alt="">
+                    <img src="img/card1.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -44,7 +44,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card2.png" class="product-thumb" alt="">
+                    <img src="img/card2.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -56,7 +56,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card3.png" class="product-thumb" alt="">
+                    <img src="img/card3.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -68,7 +68,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card4.png" class="product-thumb" alt="">
+                    <img src="img/card4.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -80,7 +80,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card5.png" class="product-thumb" alt="">
+                    <img src="img/card5.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -92,7 +92,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/6.png" class="product-thumb" alt="">
+                    <img src="img/6.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -104,7 +104,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card7.png" class="product-thumb" alt="">
+                    <img src="img/card7.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -116,7 +116,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card8.png" class="product-thumb" alt="">
+                    <img src="img/card8.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -132,15 +132,15 @@
     <!-- collections -->
     <section class="collection-container">
         <a href="#" class="collection">
-            <img src="/public/img/women-collection.png" alt="">
+            <img src="img/women-collection.png" alt="">
             <p class="collection-title">Mulher <br> aparelhos</p>
         </a>
         <a href="#" class="collection">
-            <img src="/public/img/men-collection.png" alt="">
+            <img src="img/men-collection.png" alt="">
             <p class="collection-title">Homem <br> aparelhos</p>
         </a>
         <a href="#" class="collection">
-            <img src="/public/img/accessories-collection.png" alt="">
+            <img src="img/accessories-collection.png" alt="">
             <p class="collection-title">Acessórios</p>
         </a>
     </section>
@@ -150,14 +150,14 @@
     <section class="product">
         <h2 class="product-category">Camisas</h2>
         <!-- before product-container element. -->
-        <button class="pre-btn"><img src="/public/img/arrow.png" alt=""></button>
-        <button class="nxt-btn"><img src="/public/img/arrow.png" alt=""></button>
+        <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
+        <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
         <!-- inside product section. -->
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card1.png" class="product-thumb" alt="">
+                    <img src="img/card1.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -169,7 +169,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card2.png" class="product-thumb" alt="">
+                    <img src="img/card2.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -181,7 +181,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card3.png" class="product-thumb" alt="">
+                    <img src="img/card3.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -193,7 +193,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card4.png" class="product-thumb" alt="">
+                    <img src="img/card4.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -205,7 +205,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card5.png" class="product-thumb" alt="">
+                    <img src="img/card5.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -217,7 +217,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/6.png" class="product-thumb" alt="">
+                    <img src="img/6.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -229,7 +229,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card7.png" class="product-thumb" alt="">
+                    <img src="img/card7.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -241,7 +241,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/public/img/card8.png" class="product-thumb" alt="">
+                    <img src="img/card8.png" class="product-thumb" alt="">
                     <button class="card-btn">Adicionar a Lista de Compras</button>
                 </div>
                 <div class="product-info">
@@ -255,10 +255,10 @@
     </section>
     <footer>
     </footer>
-    <script src="/public/js/nav.js"></script>
-    <script src="/public/js/home.js"></script>
-    <script src="/public/js/footer.js"></script>
-    <script src="/public/js/product.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/footer.js"></script>
+    <script src="js/product.js"></script>
 </body>
 
 </html>
