--- a/public/login.html
+++ b/public/login.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confecções : Criar Conta</title>
+    <title>Clothing : Entrar</title>
 
     <link rel="stylesheet" href="css/signup.css">
 </head>
 
 <body>
+
     <img src="img/loader.gif" class="loader" alt="">
 
     <div class="alert-box">
@@ -27,21 +28,17 @@
         </div>
 
         <div>
-            <input type="text" autocomplete="off" id="name" placeholder="name">
+
             <input type="email" autocomplete="off" id="email" placeholder="email">
             <input type="password" autocomplete="off" id="password" placeholder="password">
-            <input type="text" autocomplete="off" id="number" placeholder="número">
-            <input type="checkbox" checked class="checkbox" id="terms-and-cond">
-            <label for="terms-and-cond">Concorde Com o Nosso <a href="">Termos e Condições</a></label>
-            <br>
-            <input type="checkbox" class="checkbox" id="notification">
-            <label for="notification">Receber Ofertas Futuras e E-mails de Eventos</a></label>
-            <button class="submit-btn">Criar Conta</button>
+
+            <button class="submit-btn">Entrar</button>
         </div>
-        <a href="/login" class="link">Já Tem Uma Vonta? Entre Aqui</a>
+        <a href="/signup" class="link">Não Tem uma Conta? Criar uma Conta</a>
     </div>
     <script src="js/token.js"></script>
     <script src="js/form.js"></script>
+
 </body>
 
 </html>
